# live_transcribe

./: README.md  TODO  pyproject.toml
live_transcribe/: __main__.py  _poc.py  audio_pasimple.py  merge.py  text.py  transcribe.py
